--- a/src/components/CoinFlip.css
+++ b/src/components/CoinFlip.css
@@ -51,11 +51,13 @@
 .heads {
   background-color: #f39c12;
   transform: rotateY(0deg);
+  border-radius: 50%;
 }
 
 .tails {
   background-color: #2ecc71;
   transform: rotateY(180deg);
+  border-radius: 50%;
 }
 
 /* Стили для формы */
